--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "typescript": "^5.3.3",
